# Netatalk-for-macOS

./: .gitignore  Makefile.am  README.md  bootstrap  configure.ac  netatalk-init
include/atalk/: Makefile.am  acl.h  adouble.h  afp.h  bstrlib.h  cnid.h  cnid_dbd_private.h  cnid_private.h  compat.h  directory.h  dsi.h  ea.h  errchk.h  fce_api.h  ftw.h  globals.h  hash.h  logger.h  paths.h  server_child.h  server_ipc.h  standards.h  uam.h  unicode.h  unix.h  util.h  uuid.h  vfs.h  volinfo.h  volume.h
libatalk/: Makefile.am
libatalk/acl/: .gitignore  Makefile.am  cache.c  cache.h  uuid.c
libatalk/adouble/: ad_attr.c  ad_date.c  ad_flush.c  ad_lock.c  ad_mmap.c  ad_open.c  ad_private.h  ad_read.c  ad_sendfile.c  ad_size.c  ad_write.c
libatalk/bstring/: bstradd.c  bstrlib.c
libatalk/cnid/: cnid.c  cnid_init.c
libatalk/cnid/dbd/: cnid_dbd.c  cnid_dbd.h
libatalk/cnid/last/: cnid_last.c  cnid_last.h
libatalk/cnid/tdb/: cnid_tdb_add.c  cnid_tdb_open.c  cnid_tdb_update.c
libatalk/dsi/: dsi_attn.c  dsi_close.c  dsi_cmdreply.c  dsi_getsess.c  dsi_getstat.c  dsi_init.c  dsi_opensess.c  dsi_private.h  dsi_read.c  dsi_stream.c  dsi_tcp.c  dsi_tickle.c  dsi_write.c
libatalk/tdb/: tdb.c
libatalk/unicode/: byteorder.h  charcnv.c  iconv.c  precompose.h  utf16_case.c  utf16_casetable.h  utf8.c  util_unistr.c
libatalk/util/: Makefile.am  bprint.c  cnid.c  fault.c  ftw.c  getiface.c  locking.c  logger.c  module.c  server_child.c  server_ipc.c  server_lock.c  socket.c  strcasestr.c  strlcpy.c  unix.c  volinfo.c
libatalk/vfs/: ea.c  ea_sys.c  sys_ea.c  unix.c  vfs.c
(+143 files in other folders)
