# Makefile.am for include/atalk/

atalkincludedir = $(includedir)/atalk
atalkinclude_HEADERS = \
	adouble.h vfs.h afp.h \
	cnid.h compat.h dsi.h list.h logger.h \
	paths.h queue.h server_child.h \
	server_ipc.h uam.h unicode.h util.h uuid.h volinfo.h \
	ea.h acl.h unix.h directory.h hash.h volume.h

noinst_HEADERS = cnid_dbd_private.h cnid_private.h bstradd.h bstrlib.h errchk.h ftw.h globals.h fce_api.h standards.h
